[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/fonts/FontPleasantText.tres" type="DynamicFont" id=1]
[ext_resource path="res://res/textures/DNS.png" type="Texture" id=2]
[ext_resource path="res://res/fonts/FontLargeText.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/DNA_Segment.gd" type="Script" id=4]

[node name="DNASegment" type="VBoxContainer"]
margin_right = 144.0
margin_bottom = 97.0
custom_constants/separation = -8
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterContainer" type="HBoxContainer" parent="."]
margin_right = 144.0
margin_bottom = 45.0
rect_min_size = Vector2( 144, 0 )
custom_constants/separation = 14
alignment = 1

[node name="Letter1" type="Label" parent="LetterContainer"]
margin_left = 22.0
margin_right = 46.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "A"

[node name="Letter2" type="Label" parent="LetterContainer"]
margin_left = 60.0
margin_right = 84.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "A"

[node name="Letter3" type="Label" parent="LetterContainer"]
margin_left = 98.0
margin_right = 122.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "A"

[node name="DNAIcon" type="TextureButton" parent="."]
margin_top = 37.0
margin_right = 144.0
margin_bottom = 85.0
texture_normal = ExtResource( 2 )

[node name="DNAProperty" type="Label" parent="."]
margin_top = 77.0
margin_right = 144.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 1 )
text = "<Property>"
align = 1
